# numa

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.txt  README.md  numa.c  numa.h
include/numa/: numa.h
src/: numa.c
